Project/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: project-devops-gateway
spec:
  selector:
    istio: ingressgateway # use the istio default ingress gateway
  servers:
  - port:
      number: 38791 #Depends on the port used by minikube
      name: http
      protocol: HTTP
    hosts:
    - "127.0.0.1"
